--- a/rootdir/init.msm8974-common.rc
+++ b/rootdir/init.msm8974-common.rc
@@ -43,7 +43,7 @@ on init
     mkdir /dev/bus/usb 0755 root root
     
     wait /dev/block/mmcblk0p1
-    chown tad tad /dev/block/mmcblk0p1
+    chown oem_2997 oem_2997 /dev/block/mmcblk0p1
     chmod 0770 /dev/block/mmcblk0p1
 
     write /sys/module/qpnp_rtc/parameters/poweron_alarm 1
@@ -235,7 +235,7 @@ on boot
     chown system system /sys/devices/virtual/graphics/fb0/rgb
     chmod 0660 /sys/devices/virtual/graphics/fb0/rgb
 
-on post-fs
+on post-fs-data
     # Change to socket location on libkeyctrl/suntory for /data encryption
     # Create suntory data directory
     mkdir /dev/socket/suntory 0755 system system
@@ -278,7 +278,6 @@ on post-fs
     chown radio system /sys/class/devfreq/qcom,cpubw.40/min_freq
     chmod 664 /sys/class/devfreq/qcom,cpubw.40/min_freq
 
-on post-fs-data
     # Observe dnsmasq.leases file for dhcp information of soft ap.
     chown dhcp dhcp /data/misc/dhcp
 
@@ -363,8 +362,8 @@ on post-fs-data
 
     exec u:r:qti_init_shell:s0 -- /system/bin/rm -r /idd/lost+found
     mkdir /idd/lost+found 0770 root root
-    mkdir /idd/output 0755 idd idd
-    mkdir /idd/socket 0711 idd idd
+    mkdir /idd/output 0755 oem_2987 oem_2987
+    mkdir /idd/socket 0711 oem_2987 oem_2987
     restorecon_recursive /idd
     start wvkbd_installer
 
@@ -440,7 +439,7 @@ service audiod /system/bin/audiod
 service audioserver /system/bin/audioserver
     class main
     user audioserver
-    group audio trimarea camera drmrpc inet media mediadrm net_bt net_bt_admin net_bw_acct
+    group audio oem_2993 camera drmrpc inet media mediadrm net_bt net_bt_admin net_bw_acct
     ioprio rt 4
     writepid /dev/cpuset/foreground/tasks /dev/stune/foreground/tasks
     onrestart restart audio-hal-2-0
@@ -448,13 +447,13 @@ service audioserver /system/bin/audioserver
 service drm /system/bin/drmserver
     class main
     user drm
-    group drm system inet drmrpc readproc trimarea credmgr_client
+    group drm system inet drmrpc readproc oem_2993 oem_2996
     writepid /dev/cpuset/foreground/tasks
 
 service media /system/bin/mediaserver
     class main
     user media
-    group audio camera inet net_bt net_bt_admin net_bw_acct drmrpc mediadrm credmgr_client system
+    group audio camera inet net_bt net_bt_admin net_bw_acct drmrpc mediadrm oem_2996 system
     ioprio rt 4
     writepid /dev/cpuset/foreground/tasks /dev/stune/foreground/tasks
     # SONY: restart qcamerasvr
@@ -463,7 +462,7 @@ service media /system/bin/mediaserver
 service mediadrm /system/bin/mediadrmserver
     class main
     user media
-    group mediadrm drmrpc trimarea
+    group mediadrm drmrpc oem_2993
     ioprio rt 4
     writepid /dev/cpuset/foreground/tasks
 
